force-app/src/objects/EventApi__Event_Status_Page__c.object
<CustomObject>
    <description>Dictates which pages show on the event based on the event&apos;s status.</description>
    <fields>
        <fullName>EventApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</description>
        <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>** REQUIRED ** Linked to the related event page.</description>
        <inlineHelpText>** REQUIRED ** Linked to the related event page.</inlineHelpText>
        <label>Event Page</label>
        <referenceTo>EventApi__Event_Page__c</referenceTo>
        <relationshipLabel>Event Status Pages</relationshipLabel>
        <relationshipName>Event_Status_Pages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>** REQUIRED ** Linked to the related event status.</description>
        <inlineHelpText>** REQUIRED ** Linked to the related event status.</inlineHelpText>
        <label>Event Status</label>
        <referenceTo>EventApi__Event_Status__c</referenceTo>
        <relationshipLabel>Event Status Pages</relationshipLabel>
        <relationshipName>Event_Status_Pages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the page becomes visible on the related event.</description>
        <inlineHelpText>When checked, the page becomes visible on the related event.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Order__c</fullName>
        <description>** REQUIRED ** Page display order for the related event.</description>
        <inlineHelpText>** REQUIRED ** Page display order for the related event.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Required_Ticket_Types__c</fullName>
        <description>Comma separated list of Ticket Types required to be considered see Event Page.</description>
        <inlineHelpText>Comma separated list of Tickets Types required to be considered see Event Page.</inlineHelpText>
        <label>Required Ticket Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event Status Page</label>
    <nameField>
        <displayFormat>ESP-{0000000}</displayFormat>
        <label>Event Status Page Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Status Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>